------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.0.5
------

[jan] Mark PHP 7 as supported.


------
v2.0.4
------

[jan] Fix issues with certain locales like Turkish.


------
v2.0.3
------

[jan] Add Composer definition.


------
v2.0.2
------

[jan] Fix generating cache key for generated URLs (remi@famillecollet.com, Bug
      #11894).


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.1.2
------

[jan] Make Horde_Routes_Utils::controllerScan() Windows compatible.


------
v1.1.1
------

[gwr] Only remove the "_controller" suffix if it exists.


------
v1.1.0
------

[mjr] Added Horde_Routes_Matcher helper class.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------
v0.4.0
------

Added ability to pretty-print routes with Horde_Routes_Printer.