@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/routes",
     "description": "URL routing/mapping library",
     "type": "library",
@@ -17,7 +16,7 @@
             "role": "lead"
         }
     ],
-    "time": "2021-03-13",
+    "time": "2021-10-08",
     "repositories": [
         {
             "type": "composer",
@@ -26,15 +25,21 @@
     ],
     "require": {
         "php": "^7",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
-        "horde/util": "^3 || dev-FRAMEWORK_6_0"
+        "horde/exception": "^3",
+        "horde/util": "^3"
     },
+    "require-dev": {},
     "suggest": {
-        "horde/test": "^3 || dev-FRAMEWORK_6_0"
+        "horde/test": "^3"
     },
     "autoload": {
         "psr-0": {
             "Horde_Routes": "lib/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Horde\\Routes\\Test\\": "test/"
         }
     }
 }
