@@ -2,7 +2,8 @@
 v3.0.0alpha4
 ------------
 
-
+[rla] Support horde/http_server middleware stacks.
+|+
 
 
 ------------
